fixed spacing

--- a/style.css
+++ b/style.css
@@ -175,5 +175,4 @@ p {
   display: flex;
   padding-top: 0 !important;
   padding-left: 0 !important;
-  margin-top: -250px;
 }
